; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Mupen64Plus/png/contrib/libtests/extr_pngvalid.c_store_progressive_read.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Mupen64Plus/png/contrib/libtests/extr_pngvalid.c_store_progressive_read.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i64, i32*, i32* }

@.str = private unnamed_addr constant [34 x i8] c"store state damaged (progressive)\00", align 1
@store_progressive_read.noise = internal global i32 2, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_5__*, i64, i32)* @store_progressive_read to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @store_progressive_read(%struct.TYPE_5__* %0, i64 %1, i32 %2) #0 {
  %4 = alloca %struct.TYPE_5__*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca [512 x i32], align 16
  store %struct.TYPE_5__* %0, %struct.TYPE_5__** %4, align 8
  store i64 %1, i64* %5, align 8
  store i32 %2, i32* %6, align 4
  %9 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %10 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %9, i32 0, i32 0
  %11 = load i64, i64* %10, align 8
  %12 = load i64, i64* %5, align 8
  %13 = icmp ne i64 %11, %12
  br i1 %13, label %24, label %14

14:                                               ; preds = %3
  %15 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %16 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %15, i32 0, i32 2
  %17 = load i32*, i32** %16, align 8
  %18 = icmp eq i32* %17, null
  br i1 %18, label %24, label %19

19:                                               ; preds = %14
  %20 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %21 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %20, i32 0, i32 1
  %22 = load i32*, i32** %21, align 8
  %23 = icmp eq i32* %22, null
  br i1 %23, label %24, label %27

24:                                               ; preds = %19, %14, %3
  %25 = load i64, i64* %5, align 8
  %26 = call i32 @png_error(i64 %25, i8* getelementptr inbounds ([34 x i8], [34 x i8]* @.str, i64 0, i64 0))
  br label %27

27:                                               ; preds = %24, %19
  br label %28

28:                                               ; preds = %32, %27
  %29 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %30 = call i64 @store_read_buffer_avail(%struct.TYPE_5__* %29)
  %31 = icmp sgt i64 %30, 0
  br i1 %31, label %32, label %56

32:                                               ; preds = %28
  %33 = load i32, i32* @store_progressive_read.noise, align 4
  %34 = shl i32 %33, 9
  %35 = load i32, i32* @store_progressive_read.noise, align 4
  %36 = load i32, i32* @store_progressive_read.noise, align 4
  %37 = ashr i32 %36, 4
  %38 = xor i32 %35, %37
  %39 = and i32 %38, 511
  %40 = or i32 %34, %39
  store i32 %40, i32* @store_progressive_read.noise, align 4
  %41 = load i32, i32* @store_progressive_read.noise, align 4
  %42 = and i32 %41, 511
  store i32 %42, i32* %7, align 4
  %43 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %44 = getelementptr inbounds [512 x i32], [512 x i32]* %8, i64 0, i64 0
  %45 = load i32, i32* %7, align 4
  %46 = call i64 @store_read_chunk(%struct.TYPE_5__* %43, i32* %44, i32 %45, i32 1)
  %47 = load i32, i32* %7, align 4
  %48 = sext i32 %47 to i64
  %49 = sub nsw i64 %48, %46
  %50 = trunc i64 %49 to i32
  store i32 %50, i32* %7, align 4
  %51 = load i64, i64* %5, align 8
  %52 = load i32, i32* %6, align 4
  %53 = getelementptr inbounds [512 x i32], [512 x i32]* %8, i64 0, i64 0
  %54 = load i32, i32* %7, align 4
  %55 = call i32 @png_process_data(i64 %51, i32 %52, i32* %53, i32 %54)
  br label %28

56:                                               ; preds = %28
  ret void
}

declare dso_local i32 @png_error(i64, i8*) #1

declare dso_local i64 @store_read_buffer_avail(%struct.TYPE_5__*) #1

declare dso_local i64 @store_read_chunk(%struct.TYPE_5__*, i32*, i32, i32) #1

declare dso_local i32 @png_process_data(i64, i32, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
